tests/integration/snapshots/integration__diagnostic_snapshots__diag_unknown_pattern_field.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "unknown field `z` for struct `Point`"
  span:
    start: 70
    end: 88
  severity: Error
  phase: TypeChecking
