tests/integration/snapshots/integration__diagnostic_snapshots__diag_unreachable_pattern.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: unreachable pattern
  span:
    start: 93
    end: 94
  severity: Warning
  phase: TypeChecking
