tests/integration/snapshots/integration__diagnostic_snapshots__diag_unresolved_name.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "unresolved name `undefined_var`"
  span:
    start: 19
    end: 32
  severity: Error
  phase: NameResolution
- message: "function 'main' must return Nil, but returns `Int`"
  span:
    start: 0
    end: 34
  severity: Error
  phase: TypeChecking
